ListBox пример работы

--- a/02_Элементы_управления/07_ListBox/MainWindow.xaml
+++ b/02_Элементы_управления/07_ListBox/MainWindow.xaml
@@ -7,12 +7,25 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="360" Width="480">
     <Grid>
-        <ListBox FontSize="18" FontWeight="Bold">
+
+        <ListBox Background="AliceBlue">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="img/Sm1.png" Width="100"/>
+                <Label Content="Текст" FontSize="18"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Image Source="img/Sm2.png" Width="100"/>
+                <Label Content="Текст" FontSize="18"/>
+            </StackPanel>
+        </ListBox>
+        
+        <!--<ListBox FontSize="18" FontWeight="Bold">
             <ListBoxItem>Один - 1</ListBoxItem>
             <ListBoxItem>Два - 2</ListBoxItem>
             <ListBoxItem>Три - 3</ListBoxItem>
             <ListBoxItem>Четыре - 4</ListBoxItem>
             <ListBoxItem>Пять - 5</ListBoxItem>
-        </ListBox>
+        </ListBox>-->
+        
     </Grid>
 </Window>
