--- a/02_Элементы_управления/10_DataGrid/MainWindow.xaml
+++ b/02_Элементы_управления/10_DataGrid/MainWindow.xaml
@@ -4,9 +4,20 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_10_DataGrid"
+        xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
         mc:Ignorable="d"
         Title="MainWindow" Height="360" Width="480">
     <Grid>
-
+        <DataGrid AutoGenerateColumns="True" ItemsSource="{DynamicResource ResourceKey=Employee}">
+            <DataGrid.Resources>
+                <col:ArrayList x:Key="Employee">
+                    <local:EmployeeInfoDataSource FirstName="Tom" LastName="Andersson" Number="1"/>
+                    <local:EmployeeInfoDataSource FirstName="Tim" LastName="Andersson" Number="2"/>
+                    <local:EmployeeInfoDataSource FirstName="Ted" LastName="Andersson" Number="3"/>
+                    <local:EmployeeInfoDataSource FirstName="Tor" LastName="Andersson" Number="4"/>
+                    <local:EmployeeInfoDataSource FirstName="Tal" LastName="Andersson" Number="5"/>
+                </col:ArrayList>
+            </DataGrid.Resources>
+        </DataGrid>
     </Grid>
 </Window>
