Работа с ресурсами из C#

--- a/03_Основные_концепции_WPF/01_Resources/App.xaml
+++ b/03_Основные_концепции_WPF/01_Resources/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:_01_Resources"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <SolidColorBrush x:Key="GlobalButtonBackground" Color="Aquamarine" />
     </Application.Resources>
 </Application>
