--- a/03_Основные_концепции_WPF/02_Styles/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/02_Styles/MainWindow.xaml
@@ -7,24 +7,81 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="360" Width="480">
     <Window.Resources>
-        <Style x:Key="MyStyleForAllButtons" TargetType="Button">
-            <Setter Property="Width"      Value="100"/>
-            <Setter Property="Height"     Value="40"/>
-            <Setter Property="Margin"     Value="10"/>
-            <Setter Property="FontSize"   Value="18"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="Background" Value="AliceBlue"/>
+
+        <Style x:Key="BasicStyle" TargetType="ContentControl">
+            <Setter Property="Width"  Value="120" />
+            <Setter Property="Height" Value="40" />
+            <Setter Property="Margin" Value="5" />
         </Style>
+
+        <Style x:Key="ButtonStyle" TargetType="Button"
+               BasedOn="{StaticResource BasicStyle}">
+            <Setter Property="Background"  Value="AliceBlue"/>
+            <Setter Property="BorderBrush" Value="LightGreen" />
+            <Setter Property="Foreground"  Value="DarkBlue" />
+            <Setter Property="FontSize"    Value="18" />
+        </Style>
+
+        <Style x:Key="CheckBoxStyle" TargetType="CheckBox"
+               BasedOn="{StaticResource BasicStyle}">
+            <Setter Property="FontWeight"  Value="Bold" />
+            <Setter Property="BorderBrush" Value="Blue" />
+            <Setter Property="Foreground"  Value="Green" />
+        </Style>
+
+        <!--<Style x:Key="MyStyleForAllButtons">
+            <Setter Property="Control.Width"      Value="100"/>
+            <Setter Property="Control.Height"     Value="40"/>
+            <Setter Property="Control.Margin"     Value="10"/>
+            <Setter Property="Control.FontSize"   Value="18"/>
+            <Setter Property="Control.FontWeight" Value="Bold"/>
+            <Setter Property="Control.Background" Value="AliceBlue"/>
+        </Style>-->
+
+        <!--<Style TargetType="Button">
+            <Setter Property="Control.Width"      Value="100"/>
+            <Setter Property="Control.Height"     Value="40"/>
+            <Setter Property="Control.Margin"     Value="10"/>
+            <Setter Property="Control.FontSize"   Value="18"/>
+            <Setter Property="Control.FontWeight" Value="Bold"/>
+            <Setter Property="Control.Background" Value="AliceBlue"/>
+        </Style>-->
+        
+        <!--<Style TargetType="Button">
+            <Setter Property="Background">
+                <Setter.Value>
+                    <LinearGradientBrush>
+                        <LinearGradientBrush.GradientStops>
+                            <GradientStop Color="Aquamarine"  Offset="0" />
+                            <GradientStop Color="AliceBlue"   Offset="1" />
+                        </LinearGradientBrush.GradientStops>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="RenderTransform">
+                <Setter.Value>
+                    <RotateTransform Angle="25"/>
+                </Setter.Value>
+            </Setter>
+        </Style>-->
+
     </Window.Resources>
 
     <Grid>
-        <StackPanel>
+        <!--<StackPanel>
             <Button Style="{StaticResource MyStyleForAllButtons}">Кнопка 1</Button>
             <Button Style="{StaticResource MyStyleForAllButtons}">Кнопка 2</Button>
             <Button Style="{StaticResource MyStyleForAllButtons}">Кнопка 3</Button>
             <Button Style="{StaticResource MyStyleForAllButtons}">Кнопка 4</Button>
             <Button Style="{StaticResource MyStyleForAllButtons}">Кнопка 5</Button>
-        </StackPanel>
+        </StackPanel>-->
 
+        <StackPanel>
+            <Button Style="{StaticResource BasicStyle}">Кнопка 1</Button>
+            <Button Style="{StaticResource ButtonStyle}">Кнопка 2</Button>
+            <Button Style="{StaticResource ButtonStyle}">Кнопка 3</Button>
+            <CheckBox Style="{StaticResource BasicStyle}">Кнопка 4</CheckBox>
+            <CheckBox Style="{StaticResource CheckBoxStyle}">Кнопка 5</CheckBox>
+        </StackPanel>
     </Grid>
 </Window>
