--- a/03_Основные_концепции_WPF/03_Triggers/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/03_Triggers/MainWindow.xaml
@@ -8,7 +8,29 @@
         Title="MainWindow" Height="180" Width="180">
 
     <Window.Resources>
+
         <Style x:Key="BaseButtonStyle" TargetType="Button">
+            <Setter Property="Width"  Value="100"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Background" Value="AliceBlue"/>
+            <Setter Property="Margin" Value="10"/>
+
+            <Style.Triggers>
+                <Trigger Property="IsFocused" Value="True">
+                    <Setter Property="Background" Value="Bisque"/>
+                </Trigger>
+
+                <Trigger Property="IsMouseOver"  Value="True">
+                    <Setter Property="FontWeight" Value="Bold"/>
+                </Trigger>
+
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="FontSize" Value="20"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <!--<Style x:Key="BaseButtonStyle" TargetType="Button">
             <Setter Property="Width"  Value="100"/>
             <Setter Property="Height" Value="30"/>
             <Setter Property="Background" Value="AliceBlue"/>
@@ -23,7 +45,7 @@
                     </Trigger.Setters>
                 </Trigger>
             </Style.Triggers>
-        </Style>
+        </Style>-->
     </Window.Resources>
     
     <Grid>
