--- a/03_Основные_концепции_WPF/03_Triggers/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/03_Triggers/MainWindow.xaml
@@ -8,8 +8,32 @@
         Title="MainWindow" Height="180" Width="180">
 
     <Window.Resources>
-
         <Style x:Key="BaseButtonStyle" TargetType="Button">
+            <Style.Setters>
+                <Setter Property="Width"      Value="100"/>
+                <Setter Property="Height"     Value="30"/>
+                <Setter Property="Background" Value="Aqua"/>
+                <Setter Property="Margin"     Value="10"/>
+            </Style.Setters>
+
+            <Style.Triggers>
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        <Condition Property="IsFocused" Value="True"/>
+                        <Condition Property="IsPressed" Value="True"/>
+                    </MultiTrigger.Conditions>
+
+                    <MultiTrigger.Setters>
+                        <Setter Property="Foreground" Value="Red"/>
+                        <Setter Property="FontSize" Value="18"/>
+                    </MultiTrigger.Setters>
+                </MultiTrigger>
+            
+            </Style.Triggers>
+        
+        </Style>
+
+        <!--<Style x:Key="BaseButtonStyle" TargetType="Button">
             <Setter Property="Width"  Value="100"/>
             <Setter Property="Height" Value="30"/>
             <Setter Property="Background" Value="AliceBlue"/>
@@ -28,7 +52,7 @@
                     <Setter Property="FontSize" Value="20"/>
                 </Trigger>
             </Style.Triggers>
-        </Style>
+        </Style>-->
 
         <!--<Style x:Key="BaseButtonStyle" TargetType="Button">
             <Setter Property="Width"  Value="100"/>
