MultiDataTrigger пример работы

--- a/03_Основные_концепции_WPF/03_Triggers/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/03_Triggers/MainWindow.xaml
@@ -142,7 +142,7 @@
             </TextBlock.Style>
         </TextBlock>-->
 
-        <StackPanel HorizontalAlignment="Left">
+        <!--<StackPanel HorizontalAlignment="Left">
             <CheckBox Margin="10" Name="cbSample" Content="Используете WPF?" />
             <TextBlock Margin="10" FontSize="48">
                 
@@ -162,7 +162,32 @@
                 </TextBlock.Style>
             
             </TextBlock>
+        </StackPanel>-->
+
+        <StackPanel HorizontalAlignment="Left">
+            <CheckBox Margin="5" Name="checkYes"  Content="Используете WPF?" />
+            <CheckBox Margin="5" Name="checkSure" Content="А сейчас?" />
+            <TextBlock Margin="10" FontSize="48">
+                
+                <TextBlock.Style>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="Text" Value="Нет" />
+                        <Setter Property="Foreground" Value="Red" />
+                        
+                        <Style.Triggers>
+                            <MultiDataTrigger>
+                                <MultiDataTrigger.Conditions>
+                                    <Condition Binding="{Binding ElementName=checkYes, Path=IsChecked}" Value="True" />
+                                    <Condition Binding="{Binding ElementName=checkSure, Path=IsChecked}" Value="True" />
+                                </MultiDataTrigger.Conditions>
+                                <Setter Property="Text" Value="Да" />
+                                <Setter Property="Foreground" Value="Green" />
+                            </MultiDataTrigger>
+                        </Style.Triggers>
+                    
+                    </Style>
+                </TextBlock.Style>
+            </TextBlock>
         </StackPanel>
-        
     </Grid>
 </Window>
