--- a/03_Основные_концепции_WPF/04_Binding/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/04_Binding/MainWindow.xaml
@@ -8,17 +8,21 @@
         Title="MainWindow" Height="360" Width="480">
     <Grid>
         <StackPanel HorizontalAlignment="Left">
-            <Label Content="TwoWay" FontSize="20" FontWeight="Bold"/>
+            <Label Content="OneWayToSource" FontSize="20" FontWeight="Bold"/>
             <TextBox x:Name="_source" Margin="10" Height="50"
                      TextWrapping="Wrap" MaxWidth="150" />
+            <TextBox x:Name="_receiver" Margin="10" Height="50" MaxWidth="150"
+                     TextWrapping="Wrap"
+                     Text="{Binding ElementName=_source, Path=Text, Mode=OneWayToSource}">
+            </TextBox>
             <!--<TextBox x:Name="_receiver" Margin="10" Height="50" 
                      TextWrapping="Wrap" MaxWidth="150"
                      Text="{Binding ElementName=_source, Path=Text, Mode=OneTime}">
             </TextBox>-->
-            <TextBox x:Name="_receiver" Margin="10" Height="50" 
+            <!--<TextBox x:Name="_receiver" Margin="10" Height="50" 
                      TextWrapping="Wrap" MaxWidth="150"
                      Text="{Binding ElementName=_source, Path=Text, Mode=TwoWay}">
-            </TextBox>
+            </TextBox>-->
             <!--<TextBox x:Name="_receiver" Margin="10" Height="50" 
                      TextWrapping="Wrap" MaxWidth="150"
                      Text="{Binding ElementName=_source, Path=Text, Mode=OneWay}">
